--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Web.config
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/Web.config
@@ -27,6 +27,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.1"/>
     <httpRuntime targetFramework="4.5.2"/>
+    <customErrors mode="On" defaultRedirect="~/Erro/Index">
+      <error statusCode="404" redirect="~/Erro/NaoEncontrado"/>
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
