--- a/SOS_MoradoresDeRua/SOS_MoradoresDeRua/SOS_MoradoresDeRua.csproj
+++ b/SOS_MoradoresDeRua/SOS_MoradoresDeRua/SOS_MoradoresDeRua.csproj
@@ -115,11 +115,14 @@
     <Content Include="Scripts\Login.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Imagens\banner2.jpg" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DesaparecidoController.cs" />
+    <Compile Include="Controllers\ErroController.cs" />
     <Compile Include="Controllers\IndexController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MasterController.cs" />
@@ -142,6 +145,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Menus.cs" />
     <Compile Include="Migrations\201711232146050_1.cs" />
     <Compile Include="Migrations\201711232146050_1.Designer.cs">
       <DependentUpon>201711232146050_1.cs</DependentUpon>
@@ -188,6 +192,8 @@
     <Content Include="Views\Master\Denuncias.cshtml" />
     <Content Include="Views\Master\AdicionarFoto.cshtml" />
     <Content Include="Views\Master\Sobre.cshtml" />
+    <Content Include="Views\Erro\Index.cshtml" />
+    <Content Include="Views\Erro\NaoEncontrado.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
